[gd_scene load_steps=7 format=3 uid="uid://dy0a0solytj6i"]

[ext_resource type="PackedScene" path="res://tanks/Tank.tscn" id="1"]
[ext_resource type="Texture2D" uid="uid://vcurwnix0k3x" path="res://assets/allSprites_default_rotated.png" id="2"]
[ext_resource type="Script" path="res://tanks/EnemyTank.gd" id="3"]
[ext_resource type="PackedScene" uid="uid://c7c2ta4excbwu" path="res://bullets/EnemyBullet.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://cufh0gs75rw6r" path="res://UI/UnitDisplay.tscn" id="5"]

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(36.1539, 33.8462)

[node name="EnemyTank" instance=ExtResource("1")]
scale = Vector2(1.3, 1.3)
collision_layer = 4
collision_mask = 3
script = ExtResource("3")
turret_speed = 1.0
detection_radius = 200
Bullet = ExtResource("4")

[node name="Body" parent="." index="0"]
texture = ExtResource("2")
region_enabled = true
region_rect = Rect2(407, 48, 36, 34)

[node name="Turret" parent="." index="1"]
texture = ExtResource("2")
offset = Vector2(10, 0)
region_enabled = true
region_rect = Rect2(368, 6, 30, 12)

[node name="Muzzle" parent="Turret" index="0"]
position = Vector2(25, 0)

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2(0.384615, 0)
shape = SubResource("2")

[node name="DetectionRadius" type="Area2D" parent="." index="4"]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionRadius" index="0"]

[node name="UnitDisplay" parent="." index="5" instance=ExtResource("5")]

[connection signal="health_changed" from="." to="UnitDisplay" method="update_healthbar"]
[connection signal="body_entered" from="DetectionRadius" to="." method="_on_DetectionRadius_body_entered"]
[connection signal="body_exited" from="DetectionRadius" to="." method="_on_DetectionRadius_body_exited"]
